--- a/screensharing-test.html
+++ b/screensharing-test.html
@@ -10,14 +10,14 @@
 
     // Go to https://dashboard.tokbox.com/ to get your OpenTok API Key and to generate
     // a test session ID and token:
-    var apiKey    = '',
-      sessionId = '',
-      token     = '';
+    var apiKey    = '46038392',
+      sessionId = '2_MX40NjAzODM5Mn5-MTUxNTg2NzUxNzk4N35wckZSamFiZkJ5THFERHJBMHJ6SlM1bGF-fg',
+      token     = 'd4e1bb0e4aa679d11bb8a8ecd12f523aa2e3e832';
 
     // Replace this with the ID for your Chrome screen-sharing extension, which you can
     // get at chrome://extensions/:
 
-    var extensionId = '<YOUR_CHROME_EXTENSION_ID>';
+    var extensionId = 'ffngmcfincpecmcgfdpacbdbdlfeeokh';
 
     // If you register your domain with the the Firefox screen-sharing whitelist, instead of using
     // a Firefox screen-sharing extension, set this to the Firefox version number, such as 36, in which
